# todoo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_app.py
todoo/: app.py
